--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "migrate": "npx prisma migrate dev --schema='./src/web/packages/prisma/schema.prisma'"
   },
   "dependencies": {
     "@prisma/client": "^5.9.1",
     "classnames": "^2.5.1",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
