--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@prisma/client": "^5.9.1",
+    "@supabase/ssr": "^0.1.0",
+    "@supabase/supabase-js": "^2.39.7",
     "classnames": "^2.5.1",
     "next": "14.1.0",
     "react": "^18",
