--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "migrate": "npx prisma migrate dev --schema='./src/web/packages/prisma/schema.prisma'"
   },
   "dependencies": {
-    "@prisma/client": "^5.9.1",
+    "@prisma/client": "^5.10.2",
+    "@radix-ui/react-select": "^2.0.0",
     "@supabase/auth-helpers-nextjs": "^0.9.0",
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.39.7",
