--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "migrate": "npx prisma migrate dev --schema='./src/app/lib/prisma/schema.prisma'"
+    "migrate": "npx prisma migrate dev --schema='./src/app/lib/prisma/schema.prisma'",
+    "studio": "npx prisma studio --schema='./src/app/lib/prisma/schema.prisma'"
   },
   "dependencies": {
     "@prisma/client": "^5.10.2",
