--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.39.7",
     "@uiw/react-md-editor": "^4.0.4",
+    "@vercel/analytics": "^1.3.1",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
